// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupStreamSettingsでストリーム情報がとれた場合 enableRtmps: false 1`] = `
[
  "Stream",
  [
    {
      "nameSubCategory": "Untitled",
      "parameters": [
        {
          "name": "service",
          "value": "niconico ニコニコ生放送",
        },
        {
          "name": "server",
          "value": "rtmp url",
        },
        {
          "name": "key",
          "value": "rtmp key",
        },
      ],
    },
  ],
]
`;

exports[`setupStreamSettingsでストリーム情報がとれた場合 enableRtmps: true 1`] = `
[
  "Stream",
  [
    {
      "nameSubCategory": "Untitled",
      "parameters": [
        {
          "name": "service",
          "value": "niconico ニコニコ生放送",
        },
        {
          "name": "server",
          "value": "rtmps url",
        },
        {
          "name": "key",
          "value": "rtmps key",
        },
      ],
    },
  ],
]
`;

exports[`setupStreamSettingsで番組取得にリトライで成功する場合 1`] = `
[
  "Stream",
  [
    {
      "nameSubCategory": "Untitled",
      "parameters": [
        {
          "name": "service",
          "value": "niconico ニコニコ生放送",
        },
        {
          "name": "server",
          "value": "rtmp url",
        },
        {
          "name": "key",
          "value": "rtmp key",
        },
      ],
    },
  ],
]
`;
